# lib/db/src/schema/students.ts
@@ -1,6 +1,12 @@
-import { pgTable, text, timestamp, uuid } from "drizzle-orm/pg-core";
+import { pgTable, text, timestamp, uuid, customType } from "drizzle-orm/pg-core";
 import { createInsertSchema } from "drizzle-zod";
 import { z } from "zod/v4";
+
+const bytea = customType<{ data: Buffer | null; driverData: Buffer | null }>({
+  dataType() {
+    return "bytea";
+  },
+});
 
 export const studentsTable = pgTable("students", {
   id: uuid("id").primaryKey().defaultRandom(),
@@ -9,6 +15,9 @@ export const studentsTable = pgTable("students", {
   idNumber: text("id_number").unique().notNull(),
   batch: text("batch").notNull(),
   qrCodeData: text("qr_code_data"),
+  idCardUrl: text("id_card_url"),
+  idCardPdf: bytea("id_card_pdf"),
+  idCardPdfFileName: text("id_card_pdf_file_name"),
   phone: text("phone"),
   address: text("address"),
   cnic: text("cnic"),
